Resolved defect #758806 where header search field would overlap logo

--- a/webroot/skin/frontend/blueacorn/mis/scss/layout/_header-search.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/layout/_header-search.scss
@@ -91,7 +91,7 @@
     }
 }
 
-@include bp(max-width, 885px) {
+@include bp(max-width, 900px) {
     #header-search {
         right: 170px;
     }
